[ci-skip] Add website to plugin.yml

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ main: "${group}.CrazyEnvoys"
 author: BadBones69
 version: ${version}
 api-version: 1.13
+website: ${website}
 
 softdepend: [HolographicDisplays, DecentHolograms, PlaceholderAPI, MVdWPlaceholderAPI, Multiverse-Core, MultiWorld, WorldEdit, WorldGuard]
 description: ${description}
