--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,10 @@
-org.gradle.jvmargs=-Xmx2G
-org.gradle.parallel=false
+org.gradle.jvmargs = -Xmx2G
+org.gradle.parallel = false
+org.gradle.warning.mode = all
 
-minecraft_version=1.18.2
+minecraft_version = 1.16.5
 
-version=1.4.17.2
-group=me.badbones69.crazyenvoys
+version = 1.4.17.3
+group = me.badbones69.crazyenvoys
+name = CrazyEnvoys
+description = Drop custom crates with any prize you want all over spawn for players to fight over.
